# VegasAfterglow

./: .dockerignore  .gcloudignore  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  Makefile  README.md  TESTING.md  ads-citations.json  pyproject.toml  requirements.txt
.github/: ads-citations.json
.github/workflows/: PyPI-build.yml  ads-citations.yml  deploy-report.yml  docs.yml  papers-page.yml  tests.yml
VegasAfterglow/: __init__.py  _fitting_config.py  _fitting_utils.py  _version.py  cli.py  extinction.py  native.py  runner.py  types.py  units.py
VegasAfterglow/fitting/: __init__.py  config.py  fitter.py  io.py  params.py  samplers.py  utils.py
VegasAfterglow/plotting/: __init__.py  colors.py  diagnostic.py  labels.py  style.py
attic/: 2026-07-dead-code.md  2026-07-pdf-report.md  README.md
docs/: .buildinfo  404.html  contributing.html  cpp_api.html  documentation_guide.html  examples.html  genindex.html  index.html  installation.html  mcmc_fitting.html  objects.inv  parameter_reference.html  physics.html  python_api.html  quickstart.html  redback_integration.html  search.html  searchindex.js  test_class.html  troubleshooting.html  using_cli.html  validation.html
docs/.doctrees/: contributing.doctree  cpp_api.doctree  documentation_guide.doctree  environment.pickle  examples.doctree  index.doctree  installation.doctree  mcmc_fitting.doctree  parameter_reference.doctree  physics.doctree  python_api.doctree  quickstart.doctree  redback_integration.doctree  test_class.doctree  troubleshooting.doctree  using_cli.doctree  validation.doctree
docs/_images/: graphviz-1d6e3c74125bec9a35347006d606cd975d66aaca.png.map  graphviz-22a1fb8ec4a8dabb24bde94fa53f1c3bca29987a.png.map  graphviz-6d3ee41bd3326b87b281e68dc4c19554a85c7302.png.map  graphviz-7778877533e5dedaed128ed823da1f571f239cf1.png.map  graphviz-807c793aaaaad144647988db710f4bff23c262be.png.map  graphviz-85a1b2b0638a57a79cfb051554ba8e1a9bd3dc8a.png.map  graphviz-87a15764f0e4646f44bdc7bcd958e7551e792fd2.png.map  graphviz-959d3f71b035980fedabbee2589f82b292501be8.png.map  graphviz-a2918de47f8ba1bb4f1dbb66563fe5d095ac7cfe.png.map  graphviz-aa69247869c193c49b53ff073f9b1ad1c6001c1f.png.map  graphviz-be587240d55cc9af42c7bf1bad23398d0b7fdb52.png.map  graphviz-c862140313940c15101d7b3290f3a855e3bc18e6.png.map  graphviz-fdebb402f4871cab9e8705eb21142bcaa75ec61e.png.map
docs/_sources/: examples.rst.txt  index.rst.txt  installation.rst.txt  mcmc_fitting.rst.txt  parameter_reference.rst.txt  physics.rst.txt  python_api.rst.txt  quickstart.rst.txt  redback_integration.rst.txt  troubleshooting.rst.txt  using_cli.rst.txt  validation.rst.txt
docs/agents/: domain.md
docs/doxygen/: IO_8cpp.html  IO_8cpp.js  IO_8cpp__incl.map  IO_8cpp__incl.md5  IO_8cpp_a070b8d156a931c1514e0ba476f80bb54_cgraph.map  IO_8cpp_a0f117cd1c1e4d78329fdfd4de609a905_cgraph.map  IO_8cpp_a0f117cd1c1e4d78329fdfd4de609a905_cgraph.md5  IO_8cpp_a8222a27a38a56ddfab0c85dcb166b093_cgraph.md5  IO_8cpp_a8324dae1c76d65b1b62427e877eec379_cgraph.md5  IO_8cpp_a8deca4f8a063da93b80d02eb6ec7f51d_cgraph.map  IO_8cpp_a8deca4f8a063da93b80d02eb6ec7f51d_cgraph.md5  IO_8cpp_aa7f2bd86734f8d27bda9a4ce4256cee7_cgraph.md5  IO_8cpp_afe9b0c0925836025e21e527cd38fdf54_cgraph.md5  IO_8cpp_source.html  IO_8h.html  IO_8h.js  IO_8h__dep__incl.map  IO_8h__dep__incl.md5  IO_8h__incl.map  IO_8h__incl.md5  IO_8h_a0a6d5f057ee90e0ee899688721c6d7ef_cgraph.md5  IO_8h_a0f117cd1c1e4d78329fdfd4de609a905_cgraph.map  IO_8h_a0f117cd1c1e4d78329fdfd4de609a905_cgraph.md5  IO_8h_a10ca929dacda25a9d1cc3f2981a002c9_cgraph.map  IO_8h_a10ca929dacda25a9d1cc3f2981a002c9_cgraph.md5  IO_8h_a6a0ff8279e7d7521e15e939447168a45_cgraph.map  IO_8h_a6a0ff8279e7d7521e15e939447168a45_cgraph.md5  IO_8h_a7627cf6e33b8be0a2867d213b12732e6_cgraph.map  IO_8h_a7627cf6e33b8be0a2867d213b12732e6_cgraph.md5  IO_8h_a7be9dfde4e5dba8765c1c670e6aaafc8_cgraph.map  IO_8h_a7be9dfde4e5dba8765c1c670e6aaafc8_cgraph.md5  IO_8h_a8de7e53913a8a573d1a69bdcf009afdb_cgraph.map  IO_8h_a8deca4f8a063da93b80d02eb6ec7f51d_cgraph.md5  IO_8h_aaa31ecac784f8cc9679c445e2b75a690_cgraph.map  IO_8h_aaa31ecac784f8cc9679c445e2b75a690_cgraph.md5  IO_8h_ab2322609f2abfdba52fcfb6afa857c62_cgraph.map  IO_8h_ab2322609f2abfdba52fcfb6afa857c62_cgraph.md5  IO_8h_ab44a8789e8ccc4df68582f0fcbad897f_cgraph.map  IO_8h_ab44a8789e8ccc4df68582f0fcbad897f_cgraph.md5  IO_8h_ab44a8789e8ccc4df68582f0fcbad897f_icgraph.md5  (+2603 more)
docs/examples/: basic_usage.html  index.html  internal_quantities.html  introspection.html  models.html  sky_image.html
docs/mcmc_fitting/: advanced.html  basic_setup.html  best_practices.html  index.html  model_configurations.html  running_and_results.html
docs/source/: conf.py  contributing.rst  examples.rst  gen_figures.py  index.rst  installation.rst  mcmc_fitting.rst  parameter_reference.rst  physics.rst  python_api.rst  quickstart.rst  redback_integration.rst  troubleshooting.rst  using_cli.rst  validation.rst
include/: afterglow.h  forward-shock.hpp  inverse-compton.h  jet.h  medium.h  mesh.h  observer.h  physics.h  prompt.h  reverse-shock.hpp  shock.h  synchrotron.h  utilities.h
papers/: index.html
papers/data/: institutes_cache.json  papers.json
pybind/: error_handling.h  mcmc.cpp  mcmc.h  pybind.cpp  pybind.h  pymodel.cpp  pymodel.h  shock_dispatch.h
reports/: index.html
reports/latest/: colors.py  index.html  run_validation.py
reports/v2.0.0/: index.html
reports/v2.0.0-rc1/: index.html
reports/v2.0.0-rc2/: index.html
reports/v2.0.0-rc3/: index.html
reports/v2.0.1/: index.html
reports/v2.0.2/: index.html
reports/v2.0.3/: index.html
script/: details.ipynb  mcmc.ipynb  quick.ipynb  redback-inference.ipynb  sky-image.ipynb  vegas-mcmc.ipynb
tests/: __init__.py  report.py  report_index.py  run_all.sh  wheel_smoke.py
validation/: colors.py  run_validation.py
webapp/: app.py  compute.py  constants.py  exports.py  figures.py  helpers.py  style.py
webtool/: .gitignore  DEPLOY.md  DEPLOY_CN.md  DEPLOY_ECS_SSH.md  Makefile  README.md  deloy_CN_mainland.md  deploy_CN_mainland.md
(+406 files in other folders)
