[build-system]
requires = [
  "scikit-build-core>=0.4.3",
  "pybind11>=2.6.0",
  "numpy>=1.20",
  "setuptools>=42",
  "setuptools-scm>=6.2",
  "wheel",
]
build-backend = "scikit_build_core.build"

[project]
name = "VegasAfterglow"
dynamic = ["version"]
description = "High-performance C++ framework with Python interface for modeling Gamma-Ray Burst (GRB) afterglows."
readme = "README.md"
authors = [
  {name = "Yihan Wang", email = "yihan.astro@gmail.com"}
]
requires-python = ">=3.8"
dependencies = [
  "numpy>=1.20",
]
license = {text = "BSD-3-Clause"}

[project.optional-dependencies]
mcmc = [
  "bilby>=2.7",
  "emcee",
  "dynesty",
]
test = [
  "matplotlib>=3.5",
  "pypdf>=4.0",
  "reportlab>=4.0",
  "pdfrw>=0.4",
  "Pillow>=10.0",
  "pylatexenc>=2.10",
]

[tool.scikit-build]
wheel.packages = ["VegasAfterglow"]
wheel.license-files = ["LICENSE"]
cmake.version = ">=3.15.0"
cmake.build-type = "Release"
ninja.make-fallback = true
build.verbose = false
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"

# Default cmake args
cmake.args = ["-DCMAKE_POSITION_INDEPENDENT_CODE=ON"]

[tool.setuptools_scm]
write_to = "VegasAfterglow/_version.py"
fallback_version = "0.0.0"

[tool.scikit-build.sdist]
include = [
  "LICENSE",
  "README.md",
  "CMakeLists.txt",
  "include/**/*",
  "src/**/*",
  "pybind/**/*",
  "external/**/*",
  "VegasAfterglow/**/*"
]

[tool.cibuildwheel]
test-command = "python -c \"from VegasAfterglow import Model, TophatJet, ISM, Observer, Radiation; print('OK')\""
build-verbosity = 0
